@@ -1,1 +1,2 @@
 DIST django-model-utils-2.2.tar.gz 30034 SHA256 71ec8fc223521df60b855c214b97a965dfb379ca539905f24c975dff3f8452ce SHA512 2f279ee2bcc9ec777e12ee1b309be9ad2cc99b4c99fe8e9319582697e39ab3ded030743ef3d731926cb4dcf4c0dc8406d9796dabd2df6b39b1335e70312342a7 WHIRLPOOL 1ea0ae0f481d1909bf62e7899bc3802bc1cdf5f5b3c668a525a8420995ffe046cb62c15e588dc2fe0c2464aa8415544b7ce105a4b14b89fe638a9c0aa92cfb6d
+DIST django-model-utils-2.3.1.tar.gz 33328 SHA256 825f3dc84a6503ee2bb1668d5056f6cd14722293c50bbab3ca375db1c5eea206 SHA512 4962c984cb6fd4be8a29ab84e92281788b5cdcbf51010b2b1a70db9e0f30b9200aff09a8e5cbd268e36faac107281888952273aff59849d232a56050f942afee WHIRLPOOL b7f89813972df228bb5d26cdafcea9c8339de99bd95f482f4f6060d02aaf2b47e6b700e485669aeeb798bde46ecb58d1adda798a246d8822419387a1fa183aed
