@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*django-model-utils-2.3.1 (30 Jul 2015)
+
+  30 Jul 2015; Justin Lecher <jlec@gentoo.org> +django-model-utils-2.3.1.ebuild:
+  dev-python/django-model-utils: Version Bump
+
   06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
   dev-python/django-model-utils: Add github to remote-id in metadata.xml
 
